--- a/templates/index.html
+++ b/templates/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet" />
     <title>Prediksi Kasus Corona</title>
+    <link href="{{ url_for('static', filename='assets/img/coronavirus-icon.png') }}" rel="icon" />
   </head>
   <body class="flex flex-col justify-between item-center p-8 min-h-screen bg-green-400 text-gray-800 md:flex-row">
     <main class="bg-white p-16 rounded-lg">
