--- a/templates/index.html
+++ b/templates/index.html
@@ -144,6 +144,24 @@
     </footer>
     <!-- End Footer -->
 
+    <script>
+      document.addEventListener("contextmenu", (event) => event.preventDefault());
+      document.onkeydown = function (e) {
+        if (event.keyCode == 123) {
+          return false;
+        }
+        if (e.ctrlKey && e.shiftKey && e.keyCode == "I".charCodeAt(0)) {
+          return false;
+        }
+        if (e.ctrlKey && e.shiftKey && e.keyCode == "J".charCodeAt(0)) {
+          return false;
+        }
+        if (e.ctrlKey && e.keyCode == "U".charCodeAt(0)) {
+          return false;
+        }
+      };
+    </script>
+
     <!-- Vendor JS Files -->
     <script src="{{ url_for('static', filename='assets/vendor/bootstrap/js/bootstrap.bundle.js') }}"></script>
     <script src="{{ url_for('static', filename='assets/vendor/php-email-form/validate.js') }}"></script>
